[package]
name = "actix-web-utils"
version = "0.2.1-alpha.0"
edition = "2021"
publish = false

[dependencies]
actix-web = { version = "4", default_features = false }
cfg-if = "1"
futures = "0.3"
mime = "0.3"
serde = "1"
serde_json = "1"
tracing = "0.1"
validator = { version = "0.16", features = ["derive"], optional = true }

[dev-dependencies]
actix-web = { version = "4", default_features = false, features = ["macros"] }
serde = { version = "1", features = ["derive"] }

[features]
default = []
